# geam

./: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  acconfig.h  acinclude.m4  configure.in  db2html.in
doc/: Makefile.am  geamd-options.sgml  geamd.sgml  gloss.de.sgml  localstyle.dsl.in  manual.de.sgml
lib/: Makefile.am  libutil-config.h  logging.c  logging.h
src/: Makefile.am  aliases  decrypt  encrypt  geamd.c  geamd.conf  geamd.h  nethelp.c  nethelp.h  options.h  rfc821.c  rfc821.h  rfc822.c  rfc822.h  rwbuf.c  rwbuf.h  simple-mta.c  smtpproxy.c  smtpproxy.h  types.h
tests/: Makefile.am  basic  common  pubring.asc  secring.asc  test-plain-1
