## Process this file with automake to produce Makefile.in

# Please note that most files are maintained with another project -
# please make the updates there and not here.
# TODO: Make a target to get those file out of the CVS from the other
#	project.  Should we put them into the local RCS?
#	Make an M4 file for autoconf for those functions.

noinst_LIBRARIES = libutil.a

libutil_a_SOURCES = libutil-config.h  \
		    mischelp.h \
		    xmalloc.h xmalloc.c \
		    stringhelp.h stringhelp.c \
		    logging.h logging.c \
		    argparse.h argparse.c



