## Process this file with automake to create Makefile.in

TESTS = basic

EXTRA_DIST = $(TESTS) common pubring.asc secring.asc \
	     test-plain-1

CLEANFILES = geamd.log geamd.conf encrypt decrypt aliases \
	     pubring.gpg secring.gpg trustdb.gpg \
	     inner-host.out inner-host.log \
	     outer-host.out outer-host.log \
	     out err x x1 x2 y y1 y2

